# pim-rl

./: .gitignore  README.md  debug_matrix.py  pyproject.toml  test_fix_small_grid.py  test_manufactured_solution.py
benchmarks/tier1_analytical/: test_1_1_alfven_wave.py  test_1_1_alfven_wave_v2.py  test_1_1_fixed.py  test_1_2_tearing.py  test_1_ballooning_growth.py  test_2_energy_conservation.py  test_3_beta_scaling.py
design/: ARCHITECTURE.md  PHASE5_IMPLEMENTATION_PLAN.md  PHASE5_OVERVIEW.md
docs/: TIER1_VALIDATION_REPORT.md  v1.3-known-issues.md  v1.3-phase3-completion-report.md  v1.3-validation-report.md
docs/roadmap/: v1.2-v2.0-dissipative-elsasser.md
docs/v1.1/: LIMITATIONS.md
docs/v3.0/: ISSUE_25_SUMMARY.md  ISSUE_26_CLOSED.md  classification.md  issue25-fix-validation.md  issue25-hamiltonian-observation.md  issue26-design-decision.md  issue28-completion.md  issue28-physics-review.md  issue29-completion-report.md  issue29-tearing-ic-design.md  issue30-nu-control.md  phase1-hamiltonian-verification.md
examples/: m4_baseline_training.py
experiments/v2.0/: PHYSICS_VALIDATION_REPORT.md  README.md  SCOPE_CLARIFICATION.md  jit_solver_wrapper.py  mhd_elsasser_env.py
scripts/: benchmark_realtime_optimized.py  profile_realtime_performance.py  quick_realtime_test.py  run_baseline_experiments.py  test_issue33_jit.py  test_jit_direct.py  test_jit_speedup.py  train_ppo_baseline.py
tests/: debug_q_integrand.py  design_q2_equilibrium.py  diagnose_issue12_level1.py  diagnose_issue12_level2.py  diagnose_level1_ic.py  diagnose_tearing_physics.py  test_classical_controllers.py  test_hamiltonian_env.py  test_hamiltonian_observation.py  test_issue33_jit_physics.py  test_multi_mode_ic.py
(+138 files in other folders)
