[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pim-rl"
version = "2.0.1"
description = "PIM-RL: Plasma Instability Mode Reinforcement Learning for Tokamak Control"
authors = [
    {name = "YZ Research Team"},
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
logging = [
    "tensorboard>=2.13.0",
]

[project.urls]
Repository = "https://github.com/callme-YZ/pim-rl"

[tool.setuptools]
packages = [
    "pytokmhd",
    "pim_rl", "pim_rl.physics", "pim_rl.physics.v2",
    "pytokeq", "pytokeq.core", "pytokeq.equilibrium",
    "pytokeq.equilibrium.boundary", "pytokeq.equilibrium.diagnostics",
    "pytokeq.equilibrium.profiles", "pytokeq.equilibrium.solver",
    "pytokeq.equilibrium.utils", "pytokeq.tests", "pytokeq.validation"
]

[tool.setuptools.package-dir]
pytokmhd = "src/pytokmhd"
pim_rl = "src/pim_rl"
pytokeq = "src/pytokeq"

[tool.pytest.ini_options]
testpaths = ["src/pytokmhd/tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
